--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -86,6 +86,13 @@
               Submit Rating
             </button>
           </div>
+
+          <div class="flag-for-review-container">
+            <button id="flag-for-review" class="button is-rounded is-fullwidth">
+              FLAG FOR REVIEW
+            </button>
+          </div>
+
           <div id="rating-success" class="notification success is-hidden">
             Rating submitted successfully!
           </div>
