--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -106,7 +106,7 @@
               <% } else { %>
                 <span style="padding-right: 20px; font-size: 1.7rem;">Hi, <%= currentUser.firstname %>!</span>
                 <% if (currentUser.isAdmin) { %>
-                  <a class="button is-rounded" href="/admin/users-awaiting-approval">
+                  <a class="button is-rounded" href="/admin/dashboard">
                     <strong>Admin Console</strong>
                   </a>
                 <% } %>
