--- a/public/css/quiz.css
+++ b/public/css/quiz.css
@@ -31,8 +31,8 @@ html, body {
 
 .content-container {
     text-align: justify;
-    background-color: #548aff;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    background: none;
+    /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
     border-radius: 7px;
     display: flex;
     flex-direction: column;
@@ -47,7 +47,7 @@ html, body {
 
 #answer {
     font-weight: 700;
-    color: #fff;
+    color: #000;
 }
 
 #category {
@@ -111,7 +111,7 @@ html, body {
     height: 25px;
     margin: 0 auto 25px;
     position: relative;
-    border: 2px solid rgba(37, 104, 251, 1);
+
     background-color: #f3f3f3;
     border-radius: 5px;
     -webkit-border-radius: 5px;
@@ -158,7 +158,7 @@ html, body {
 }
 
 #question {
-    color: #fff;
+    color: #000;
     font-weight: 700;
 }
 
@@ -225,8 +225,7 @@ html, body {
 
 .card,
 .box {
-    background-color: rgba(255, 255, 255, 0.6) !important;
-    border: 2px solid rgba(37, 104, 251, 1);
+    background-color: rgba(255, 255, 255, 0.5) !important;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 
 }
@@ -241,18 +240,40 @@ html, body {
 
 .answer-container {
     padding: 7px;
-    min-height: 200px;
+    min-height: 180px;
+}
+
+/* Buttons */
+.button-container {
+    align-items: center;
+    justify-content: space-evenly;
 }
 
 #submit-rating {
-    background-color: #2568fb;
+    background-color: transparent;
     color: #ffffff;
-    border: none;
+    border: 2px solid #2568fb;
     font-weight: 700;
-    font-size: 1.2rem;
+    font-size: 0.8rem;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-
+    text-transform: uppercase;
+    height: 1.9rem;
+    transition: all 0.3s;
 }
+
+#flag-for-review {
+    background-color: transparent;
+    color: #fff;
+    border: 2px solid #ff3860;
+    font-weight: 700;
+
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    text-transform: uppercase;
+    height: 1.9rem;
+    transition: all 0.3s;
+}
+
+
 
 #show-answer {
     background-color: #2568fb;
@@ -274,29 +295,36 @@ html, body {
 .rating {
     display: inline-flex;
     cursor: pointer;
+    margin: 0.8rem;
+}
+
+.rating .fa-star {
+    font-size: 1.2rem;
 }
 
 .rating span {
     font-size: 2rem;
-    color: #dafc8b;
+    color: rgba(211, 211, 211, 0.3);
     padding: 0 0.25rem;
-
 }
+
 
 .rating span.selected {
-    color: rgba(37, 104, 251, 1);
+    color: gold;
+    -webkit-text-stroke: 0px;
 }
 
-.notification {
+/* .notification {
     background-color: #f5f5f5;
     border-radius: 4px;
 
     position: relative;
-    /* margin-top: 0.5rem; */
+    margin-top: 0.5rem;
     color: #4a4a4a;
-}
+} */
 
-.notification.success {
+
+/* .notification.success {
     background-color: rgba(35, 209, 96, 0.6);
     color: #000;
     font-weight: 700;
@@ -307,7 +335,7 @@ html, body {
     -ms-border-radius: 10px;
     -o-border-radius: 10px;
     -webkit-border-radius: 10px;
-}
+} */
 
 .is-hidden {
     display: none;
@@ -318,36 +346,33 @@ html, body {
     .container {
         height: auto;
         min-height: 100vh;
+        width: 90%;
+        margin: 0 auto;
     }
 
     .main-wrapper {
         height: auto;
         min-height: 100vh;
     }
+
+
+
 }
 
 
 
-.flag-for-review-container {
+/* .flag-for-review-container {
     position: relative;
     margin-top: 15px;
 }
 
-#flag-for-review {
-    background-color: transparent;
-    border: 2px solid #ff3860;
-    color: #ff3860;
-    font-weight: bold;
-    text-transform: uppercase;
-    transition: all 0.3s;
-}
 
 #flag-for-review:hover {
     background-color: #ff3860;
     color: #ffffff;
-}
+} */
 
-.flag-for-review-container::before,
+/* .flag-for-review-container::before,
 .flag-for-review-container::after {
     content: "";
     position: absolute;
@@ -374,4 +399,4 @@ html, body {
 #flag-for-review:hover~.flag-for-review-container::before,
 #flag-for-review:hover~.flag-for-review-container::after {
     transform: scaleX(1);
-}
+} */
