--- a/views/briefings.ejs
+++ b/views/briefings.ejs
@@ -1,3 +1,134 @@
-<div id="card-container" class="columns is-desktop"></div>
+<section class="section">
+  <div class="container">
+    <div class="columns is-multiline">
+      <div class="column is-full-mobile is-half-tablet is-one-quarter-desktop">
+        <div class="card">
+          <div class="card-image">
+            <figure class="image is-4by3">
+              <img src="/images/crew.jpg" alt="pilots facing a sunset" />
+            </figure>
+          </div>
+          <div class="card-content">
+            <div class="media">
+              <div class="media-content">
+                <p class="title">ICE Briefing</p>
+              </div>
+            </div>
 
-<script type="module" src="../js/briefings.js"></script>
+            <div class="content">
+              <ul>
+                <li class="main-item">I- Introductions</li>
+                <li class="item-description">Crew introductions</li>
+                <li class="item-description">Identification</li>
+                <li class="item-description">Fitness for Duty</li>
+
+                <li class="main-item">C- Communication</li>
+                <li class="item-description">How we will communicate</li>
+                <li class="item-description">Under duress, use full name</li>
+                <li class="item-description">Secret knock</li>
+                <li class="main-item">E- Emergency/Evacuation</li>
+                <li class="item-description">Flight deck entry protocol</li>
+                <li class="item-description">Evacuation</li>
+                <li class="item-description">Any emergency</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="column is-full-mobile is-half-tablet is-one-quarter-desktop">
+        <div class="card">
+          <div class="card-image">
+            <figure class="image is-4by3">
+              <img src="/images/pilot.jpg" alt="pilot in the flight deck" />
+            </figure>
+          </div>
+          <div class="card-content">
+            <div class="media">
+              <div class="media-content">
+                <p class="title">All Flights Briefing</p>
+              </div>
+            </div>
+
+            <div class="content">
+              <ul>
+                <li class="main-item">MX Items</li>
+                <li class="main-item">FAMs, LEOs, etc.</li>
+                <li class="main-item">Expected Taxi Time / Wait Time</li>
+                <li class="main-item">Flight Time</li>
+                <li class="main-item">Ground Delays</li>
+                <li class="main-item">Weather</li>
+                <li class="main-item">Diversion</li>
+                <li class="main-item">Unfamiliar Airports</li>
+                <li class="main-item">Annoncements</li>
+                <li class="main-item">Other Threats</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="column is-full-mobile is-half-tablet is-one-quarter-desktop">
+        <div class="card">
+          <div class="card-image">
+            <figure class="image is-4by3">
+              <img src="/images/flight-deck.jpg" alt="flight deck at night" />
+            </figure>
+          </div>
+          <div class="card-content">
+            <div class="media">
+              <div class="media-content">
+                <p class="title">Welcome Aboard</p>
+              </div>
+            </div>
+
+            <div class="content">
+              <p class="main-item">
+                "Ladies and gentlemen, welcome aboard _________ flight ______
+                service to _________. We're going to be pushing back here in
+                just a few minutes and it's a short/long taxi out to the runway.
+                Once we're in the air, flight time today is ______. We are
+                expecting / not expecting a few bumps on the way out today. In
+                the back you have _____ and _____. They are there primarily for
+                your safety so I would appreciate you giving them your attention
+                during their safety announcements. We'll be pushing back
+                shortly, we do appreciate your business and welcome aboard
+                flight ______."
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="column is-full-mobile is-half-tablet is-one-quarter-desktop">
+        <div class="card">
+          <div class="card-image">
+            <figure class="image is-4by3">
+              <img
+                src="/images/airplane.jpg"
+                alt="airplane getting ready to land"
+              />
+            </figure>
+          </div>
+          <div class="card-content">
+            <div class="media">
+              <div class="media-content">
+                <p class="title">WANT Briefing</p>
+              </div>
+            </div>
+
+            <div class="content">
+              <ul>
+                <li class="main-item">W- Weather / ATIS</li>
+                <li class="main-item">
+                  A- Gate -> Taxi -> Runway -> Prior V1 -> After V1 -> SID
+                </li>
+                <li class="main-item">N- NOTAMS</li>
+                <li class="main-item">
+                  T- Biggest Threat and Mitigation Strategy
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
