--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -59,7 +59,7 @@
           <div class="navbar-item">
             <div class="buttons">
               <% if (!currentUser) { %>
-                <a class="button is-rounded" style="background-color: #ee6c4d;" href="/register">
+                <a class="button is-rounded" style="background-color: #009EE2;" href="/register">
                   <strong>Sign up</strong>
                 </a>
                 <a class="button is-light is-rounded" href="/login">
