--- a/public/css/briefings.css
+++ b/public/css/briefings.css
@@ -1,19 +1,27 @@
-body {
+html, body {
     margin: 0;
+    height: 100%;
     padding: 0;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
     box-sizing: border-box;
     font-family: 'Merriweather', serif;
-    background-color: #000;
+    display: flex;
+    flex-direction: column;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://images.unsplash.com/photo-1506695939086-156c2eff767b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: #fff;
 }
 
-.card {
-    margin: 1rem;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+.title {
+    font-size: 1.5rem;
 }
 
-#card-container {
-    flex: 1;
+.main-item {
+    font-size: 0.8rem;
+}
+
+.item-description {
+    font-size: 0.7rem;
+    margin-left: 20px;
 }
