--- a/public/css/view-notes.css
+++ b/public/css/view-notes.css
@@ -13,7 +13,12 @@ body {
 
 }
 
+.card {
+    margin: 20px;
+}
+
 .title {
+    margin-top: 2rem;
     color: white;
 }
 
@@ -22,27 +27,24 @@ body {
 }
 
 .card-header {
-    background-color: #B9E9FC;
+    background-color: #009EE2;
     color: black;
+    border-bottom: 1px solid #000;
 }
 
 .card-content {
-    background-color: red;
+    background-color: #fff;
 }
 
 .card-header-title {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     color: #000;
 }
 
-.created-at {
-    font-size: 0.6rem;
-    color: #4a4a4a;
+.content {
+    font-size: 1rem;
 }
 
-.created-date {
-    padding: 3px;
-}
 
 .delete-button {
     position: absolute;
