--- a/public/css/main.css
+++ b/public/css/main.css
@@ -34,7 +34,7 @@ html, body {
 }
 
 .divider {
-    border-top: 2px solid #fff;
+    background-color: #009EE2;
 
 }
 
@@ -44,39 +44,30 @@ html, body {
 }
 
 .legal {
-    margin-top: 20px;
-    font-size: 0.5rem;
+    margin-top: 10px;
+    font-size: 0.3rem;
 }
 
 .legal-container {
-    width: 100%;
+    width: 90%;
 }
 
-.title {
-    font-size: 3rem;
-    color: #fff !important;
+.navbar-link {
+    padding-left: 10px;
+    font-size: 0.7rem;
+    font-weight: 400;
 }
 
-.subtitle {
-    font-size: 2.5rem;
+.navbar-start a {
+    padding-left: 10px;
+    font-size: 0.7rem;
+    font-weight: 400;
 }
 
-.title, .subtitle {
-    color: #fff !important;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.9);
-
-}
-
-.navbar img {
-    width: 200px;
-    height: 500px;
-    background-color: #000;
-}
-
-.navbar-item h3 {
+.navbar-item {
     font-weight: bold;
-    font-size: larger;
-    /* text-align: center; */
+    font-size: 0.4rem;
+
 }
 
 .navbar-item ul {
@@ -84,22 +75,8 @@ html, body {
     list-style-type: none;
 }
 
-.navbar-item li {
+.navbar-item li a {
     padding-left: 10px;
-}
-
-footer {
-    margin-top: 10px;
-    width: 100%;
-    background-color: none;
-}
-
-@media only screen and (max-width: 768px) {
-    .title {
-        font-size: 2rem;
-    }
-
-    .subtitle {
-        font-size: 1.5rem;
-    }
+    font-size: 0.7rem;
+    font-weight: 400;
 }
