--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -21,25 +21,26 @@
           <div class="navbar-item has-dropdown is-hoverable">
             <a class="navbar-link">Options</a>
             <div class="navbar-dropdown">
-              <h3 class="navbar-item">Weather</h3>
-              <ul>
-              <li><a class="navbar-item" href="/weather">Weather Info</a></li>
-              </ul>
-              <hr class="navbar-divider">
+              <h3 class="navbar-item">Misc Items</h3>
+                <ul>
+                <li><a class="navbar-item" href="/weather">Weather Planning</a></h3></li>
+                
+                <li><a class="navbar-item" href="/fuel">Fuel Planning</a></li>
+                </ul>
               <h3 class="navbar-item">Briefings</h3>
               <ul>
-              <li><a class="navbar-item" href="/briefings">View All Briefings</a></li>
+              <li><a class="navbar-item" href="/briefings">Briefing Examples</a></li>
               </ul>
               <hr class="navbar-divider">
               <h3 class="navbar-item">Flows</h3>
               <ul>
-              <li><a class="navbar-item" href="/flows">View All Flows</a></li>
+              <li><a class="navbar-item" href="/flows">All Captain Flows</a></li>
               </ul>
               <hr class="navbar-divider">
               <h3 class="navbar-item">Notes</h3>
               <ul>
-                <li><a class="navbar-item" href="/notes/create">Create a Note</a></li>
-                <li><a class="navbar-item" href="/notes/view-notes">View All Notes</a></li>
+                <li><a class="navbar-item" href="/notes/create">New Note</a></li>
+                <li><a class="navbar-item" href="/notes/view-notes">View Notes</a></li>
               </ul>
               <hr class="navbar-divider">
               <h3 class="navbar-item">Questions</h3>
