--- a/views/briefings.ejs
+++ b/views/briefings.ejs
@@ -23,13 +23,22 @@
                 <li class="item-description">Fitness for Duty</li>
 
                 <li class="main-item">C- Communication</li>
-                <li class="item-description">How we will communicate</li>
-                <li class="item-description">Under duress, use full name</li>
-                <li class="item-description">Secret knock</li>
+                <li class="item-description">
+                  Cabin/flight deck emergency notification (distress or evac
+                  signal)
+                </li>
+                <li class="item-description">
+                  Breach of security or suspicious activity, sterile flight
+                  deck.
+                </li>
+                <li class="item-description">
+                  Use full name under duress - no code words
+                </li>
                 <li class="main-item">E- Emergency/Evacuation</li>
                 <li class="item-description">Flight deck entry protocol</li>
-                <li class="item-description">Evacuation</li>
-                <li class="item-description">Any emergency</li>
+                <li class="item-description">
+                  Any thing else relevant to the security of the flight
+                </li>
               </ul>
             </div>
           </div>
