--- a/views/briefings.ejs
+++ b/views/briefings.ejs
@@ -138,6 +138,36 @@
           </div>
         </div>
       </div>
+      <div class="column is-full-mobile is-half-tablet is-one-quarter-desktop">
+        <div class="card">
+          <div class="card-image">
+            <figure class="image is-4by3">
+              <img
+                src="/images/pilots-working-in-flight-deck.jpg"
+                alt="pilot in the flight deck"
+              />
+            </figure>
+          </div>
+          <div class="card-content">
+            <div class="media">
+              <div class="media-content">
+                <p class="title">Captin Emergency Briefing to FO</p>
+              </div>
+            </div>
+
+            <div class="content">
+              <p class="main-item">
+                "F/O - you have the aircraft and the radios. Declare an
+                emergency. Take the aircraft to (designated alternate airport),
+                longest landing runway, 10nm final; 200kts. Go as fast as you
+                are comfortable, but no faster, and get my attention if you run
+                into any problems or have any questions. Do you have any
+                questions now?"
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </section>
