--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -21,6 +21,7 @@
           <div class="navbar-item has-dropdown is-hoverable">
             <a class="navbar-link">Options</a>
             <div class="navbar-dropdown">
+              <a href="/quiz"><button class="button is-rounded" id="flashcard-btn">Flashcards</button></a>
               <h3 class="navbar-item">Misc Items</h3>
                 <ul>
                 <li><a class="navbar-item" href="/weather">Weather Planning</a></h3></li>
@@ -46,14 +47,14 @@
               <h3 class="navbar-item">Questions</h3>
               <ul>
                 <li><a class="navbar-item" href="/questions/create">Add Questions</a></li>
-                <li><a class="navbar-item" href="/modify-questions">Edit/Remove Questions</a></li>
+                
                 <li><a class="navbar-item" href="/view-questions">View All Questions</a></li>
               </ul>
+              <hr class="navbar-divider">
+                            
             </div>
           </div>
-          <a class="navbar-item is-size-5 has-text-weight-bold" href="/quiz">
-            Flashcards
-          </a>
+          
         </div>
     
         <div class="navbar-end">
@@ -67,7 +68,7 @@
                   <strong>Login</strong>
                 </a>
               <% } else { %>
-                <span style="padding-right: 20px; font-size: 1.7rem;">Hi, <%= currentUser.firstname %>!</span>
+                <span style="padding-right: 20px; font-size: 1.5rem; color: #009EE2; padding-bottom: 5px;">Hi, <%= currentUser.firstname %>!</span>
                 <% if (currentUser.isAdmin) { %>
                   <a class="button is-rounded" href="/admin/dashboard">
                     <strong>Admin Console</strong>
