fixed the note display on tablets and added some general css files

--- a/views/view-notes.ejs
+++ b/views/view-notes.ejs
@@ -5,7 +5,7 @@
 <% } else { %>
 <div class="columns is-multiline">
   <% notes.forEach(note => { %>
-  <div class="column is-one-quarter-desktop is-one-half-tablet is-full-mobile">
+  <div class="column is-one-quarter-desktop is-half-tablet is-full-mobile">
     <div class="card">
       <form
         action="/notes/delete/<%= note._id %>"
