--- a/views/fuel.ejs
+++ b/views/fuel.ejs
@@ -5,7 +5,10 @@
       <tbody>
         <tr>
           <td>You are flying along and have</td>
-          <td><span id="miles" class="highlight"></span> miles to go.</td>
+          <td>
+            <span id="miles" class="highlight"></span> miles to go to your
+            destination.
+          </td>
         </tr>
         <tr>
           <td>Your groundspeed is</td>
