--- a/views/login.ejs
+++ b/views/login.ejs
@@ -37,5 +37,10 @@
         </div>
       </div>
     </form>
+    <div class="field">
+      <div class="control">
+        <a href="/forgot-password">Forgot Password?</a>
+      </div>
+    </div>
   </div>
 </div>
